Removes unused HTML file and refines CSS for product cards
Eliminates the FstoreTemplate.html file to streamline the project structure.

Enhances CSS for better styling of product cards, including hover effects, badges, and improved layout.

Adds JavaScript functionality for dynamic image hover effects on product cards, improving user interactivity.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -600,16 +600,12 @@
 
     </section>
 
-
-
-
     <!-- Best Sellers -->
+    <!-- done -->
 
-
-    <div class="seller-main pt-3 pb-3 p-5" id="Bestsellers">
-        <div>
-            <h3 class="justify-self-center"><b>Best Sellers</b></h3>
-            <br><br>
+    <div class="seller-main " id="Bestsellers">
+        <div class="text-center w-100">
+            <h3 class="seller-heading py-3 mb-0"><b>Best Sellers</b></h3>
             <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
         </div>
 
@@ -620,13 +616,21 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
                     <div class="sellercard position-relative">
                         <div class="sellercard-body">
-                            <img src="product-f-1.webp" alt="wc1" width="100%" height="100%">
+                            <!-- img -->
+                            <div class="product-img">
+                                <img src="product-f-1.webp" alt="wc1" class="main-img">
+                                <img src="product-f-2.webp" alt="variant" class="hover-img">
+                            </div>
+
                             <h5 class="sellercard-title ">Women's Fashion</h5>
                             <a href="#" class="seller-btn">Tempor Incididunt</a>
-                            <div class="price-rating d-flex align-items-center">
-                                <p class="mb-0">$129.00</p>
-                                <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
-                                <span class="ms-1">4.8(42)</span>
+                            <div class="price-rating d-flex align-items-center ">
+                                <p class="mb-0 ">$129.00</p>
+                                <!-- rating -->
+                                <div class="star d-flex ">
+                                    <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
+                                    <span class="ms-1">4.8(42)</span>
+                                </div>
                             </div>
                             <!-- quick-view/cart -->
                             <div class="product-action position-absolute top-0 end-0 p-2 ">
@@ -643,13 +647,20 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="sellercard position-relative">
                         <div class="sellercard-body ">
-                            <img src="product-m-1.webp" alt="wc1" width="100%" height="100%">
+                            <!-- img -->
+                            <div class="product-img">
+                                <img src="product-m-1.webp" alt="wc1" class="main-img">
+                                <img src="product-m-4.webp" alt="" class="hover-img">
+                            </div>
                             <h5 class="sellercard-title">Men's Fashion</h5>
                             <a href="#" class="seller-btn">Consectetur</a>
                             <div class="price-rating d-flex align-items-center">
                                 <p class="mb-0">$72.00</p>
-                                <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
-                                <span class="ms-1">4.6(28)</span>
+                                <!-- rating -->
+                                <div class="star d-flex ">
+                                    <i class='bx bxs-star bx-sm ms-2 ' style='color:#ffdc2f'></i>
+                                    <span class="ms-1 ">4.6(28)</span>
+                                </div>
                             </div>
                             <!-- small badge -->
                             <div class="product-badge position-absolute top-0 start-0 m-2">
@@ -671,14 +682,23 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="sellercard position-relative">
                         <div class="sellercard-body">
-                            <img src="product-f-3.webp" alt="wc1" width="100%" height="100%">
+                            <!-- img -->
+                            <div class="product-img">
+                                <img src="product-f-3.webp" alt="Pw2" class="main-img">
+                                <img src="product-f-4.webp" alt="pwv2" class="hover-img">
+                            </div>
                             <h5 class="sellercard-title">Accessories</h5>
                             <a href="#" class="seller-btn">Adipiscing Magna</a>
                             <div class="price-rating d-flex align-items-center">
-                                <p class="mb-0">$79.00</p>
-                                <del class="text-muted fw-normal ms-2">$100</del>
-                                <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
-                                <span class="ms-1">4.9(56)</span>
+                                <div class="d-flex">
+                                    <p class="mb-0">$79.00</p>
+                                    <del class="text-muted fw-normal ms-2">$100</del>
+                                </div>
+                                <!-- rating -->
+                                <div class="star d-flex ">
+                                    <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
+                                    <span class="ms-1">4.9(56)</span>
+                                </div>
                             </div>
                             <!-- small badge -->
                             <div class="product-badge position-absolute top-0 start-0 m-2">
@@ -700,13 +720,20 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="sellercard position-relative">
                         <div class="sellercard-body">
-                            <img src="product-m-3.webp" alt="wc1" width="100%" height="100%">
+                            <!-- img -->
+                            <div class="product-img">
+                                <img src="product-m-3.webp" alt="wm3" class="main-img">
+                                <img src="product-m-4.webp" alt="wm4" class="hover-img">
+                            </div>
                             <h5 class="sellercard-title">Women's Fashion</h5>
                             <a href="#" class="seller-btn">Tempor Incididunt</a>
                             <div class="price-rating d-flex align-items-center">
                                 <p class="mb-0">$129.00</p>
-                                <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
-                                <span class="ms-1">4.8(42)</span>
+                                <!-- rating -->
+                                <div class="star d-flex ">
+                                    <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
+                                    <span class="ms-1">4.8(42)</span>
+                                </div>
                             </div>
                             <!-- quick-view/cart -->
                             <div class="product-action position-absolute top-0 end-0 p-2">
@@ -722,13 +749,20 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="sellercard position-relative">
                         <div class="sellercard-body">
-                            <img src="product-f-5.webp" alt="wc1" width="100%" height="100%">
+                            <!-- img -->
+                            <div class="product-img">
+                                <img src="product-f-5.webp" alt="wf5" class="main-img">
+                                <img src="product-f-6.webp" alt="wf6" class="hover-img">
+                            </div>
                             <h5 class="sellercard-title">Women's Fashion</h5>
                             <a href="#" class="seller-btn">Tempor Incididunt</a>
                             <div class="price-rating d-flex align-items-center">
                                 <p class="mb-0">$129.00</p>
-                                <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
-                                <span class="ms-1">4.8(42)</span>
+                                <!-- rating -->
+                                <div class="star d-flex ">
+                                    <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
+                                    <span class="ms-1">4.8(42)</span>
+                                </div>
                             </div>
                             <!-- small badge -->
                             <div class="product-badge position-absolute top-0 start-0 m-2">
@@ -750,14 +784,23 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="sellercard position-relative">
                         <div class="sellercard-body">
-                            <img src="product-m-5.webp" alt="wc1" width="100%" height="100%">
+                            <!-- img -->
+                            <div class="product-img">
+                                <img src="product-m-5.webp" alt="pm5" class="main-img">
+                                <img src="product-m-6.webp" alt="pm6" class="hover-img">
+                            </div>
                             <h5 class="sellercard-title">Men's Fashion</h5>
                             <a href="#" class="seller-btn">Eiusmod Tempo</a>
                             <div class="price-rating d-flex align-items-center">
-                                <p class="mb-0">$110.00</p>
-                                <del class="text-muted fw-normal ms-2">$200</del>
-                                <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
-                                <span class="ms-1">4.6(52)</span>
+                                <div class="d-flex">
+                                    <p class="mb-0">$110.00</p>
+                                    <del class="text-muted fw-normal ms-2">$200</del>
+                                </div>
+                                <!-- rating -->
+                                <div class="star d-flex ">
+                                    <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
+                                    <span class="ms-1">4.6(52)</span>
+                                </div>
                             </div>
                             <!-- quick-view/cart -->
                             <div class="product-action position-absolute top-0 end-0 p-2">
@@ -773,13 +816,20 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="sellercard position-relative">
                         <div class="sellercard-body">
-                            <img src="product-f-7.webp" alt="wc1" width="100%" height="100%">
+                            <!-- img -->
+                            <div class="product-img">
+                                <img src="product-f-7.webp" alt="pf7" class="main-img">
+                                <img src="product-f-8.webp" alt="pf8" class="hover-img">
+                            </div>
                             <h5 class="sellercard-title">Women's Fashion</h5>
                             <a href="#" class="seller-btn">Incididunt Labore</a>
                             <div class="price-rating d-flex align-items-center">
                                 <p class="mb-0">$55.00</p>
-                                <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
-                                <span class="ms-1">4.8(31)</span>
+                                <!-- rating -->
+                                <div class="star d-flex ">
+                                    <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
+                                    <span class="ms-1">4.8(31)</span>
+                                </div>
                             </div>
                             <!-- quick-view/cart -->
                             <div class="product-action position-absolute top-0 end-0 p-2">
@@ -795,13 +845,20 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="sellercard position-relative">
                         <div class="sellercard-body">
-                            <img src="product-m-7.webp" alt="wc1" width="100%" height="100%">
+                            <!-- img -->
+                            <div class="product-img">
+                                <img src="product-m-7.webp" alt="pm7" class="main-img">
+                                <img src="product-m-8.webp" alt="pm8" class="hover-img">
+                            </div>
                             <h5 class="sellercard-title text-muted">Men's Fashion</h5>
                             <a href="#" class="seller-btn">Aliqua Magna</a>
                             <div class="price-rating d-flex align-items-center">
                                 <p class="mb-0">$79.00</p>
-                                <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
-                                <span class="ms-1">4.5(47)</span>
+                                <!-- rating -->
+                                <div class="star d-flex ">
+                                    <i class='bx bxs-star bx-sm ms-2' style='color:#ffdc2f'></i>
+                                    <span class="ms-1">4.5(47)</span>
+                                </div>
                             </div>
                             <!-- small badge -->
                             <div class="product-badge position-absolute top-0 start-0 m-2">
@@ -848,8 +905,8 @@
                     <div class="plist-card h-100">
                         <!-- small badge -->
                         <div class="plist-badge">
-                            <p class="text-white"
-                                style="background-color: #8c0d4f; width: 60px; height: 28px; border-radius: 24px; align-items: center;justify-content: center; font-size: 24px; display: flex;">
+                            <p class="text-white" style="background-color: #8c0d4f; width: 44px; height: 24px; border-radius: 24px; align-items: center;
+                                justify-content: center; font-size: 14px; font-weight: 500; display: flex;">
                                 sale</p>
                         </div>
                         <img src="purse.webp" class="card-img-top" alt="purse">
@@ -932,8 +989,8 @@
                     <div class="plist-card h-100">
                         <!-- small badge -->
                         <div class="plist-badge">
-                            <p class="text-white"
-                                style="background-color: #8c0d4f; width: 60px; height: 28px; border-radius: 24px; align-items: center;justify-content: center; font-size: 24px; display: flex;">
+                            <p class="text-white" style="background-color: #8c0d4f; width: 44px; height: 24px; border-radius: 24px; align-items: center;
+                                justify-content: center; font-size: 14px; font-weight: 500; display: flex;">
                                 New</p>
                         </div>
                         <img src="sunglases.webp" class="card-img-top" alt="sunglasses">
@@ -1018,13 +1075,13 @@
                         </div>
                         <!-- quick view on hover -->
                         <div class="productC-action ">
-                            <a href="#" class="quick-view" style="text-decoration: none;">
+                            <a href="#" class="quick-view" >
                                 <i class='bx bx-heart bx-md'></i></a>
 
-                            <a href="#" class="quick-view" style="text-decoration: none;">
+                            <a href="#" class="quick-view" >
                                 <i class='bx bxs-show bx-md'></i></a>
 
-                            <a href="#" class="quick-view" style="text-decoration: none;">
+                            <a href="#" class="quick-view" >
                                 <i class='bx bx-sort-alt-2 bx-rotate-270 bx-md'></i></a>
 
                         </div>
@@ -1049,8 +1106,8 @@
                     <div class="plist-card h-100">
                         <!-- small badge -->
                         <div class="plist-badge">
-                            <p class="text-white"
-                                style="background-color: #8c0d4f; width: 60px; height: 28px; border-radius: 24px; align-items: center;justify-content: center; font-size: 24px; display: flex;">
+                            <p class="text-white" style="background-color: #8c0d4f; width: 44px; height: 24px; border-radius: 24px; align-items: center;
+                                justify-content: center; font-size: 14px; font-weight: 500; display: flex;">
                                 new</p>
                         </div>
                         <img src="denimjecket-7.webp" class="card-img-top" alt="denim">
@@ -1129,8 +1186,8 @@
                     <div class="plist-card h-100">
                         <!-- small badge -->
                         <div class="plist-badge">
-                            <p class="text-white"
-                                style="background-color: #8c0d4f; width: 60px; height: 28px; border-radius: 24px; align-items: center;justify-content: center; font-size: 24px; display: flex;">
+                            <p class="text-white" style="background-color: #8c0d4f; width: 44px; height: 24px; border-radius: 24px; align-items: center;
+                                justify-content: center; font-size: 14px; font-weight: 500; display: flex;">
                                 sale</p>
                         </div>
                         <img src="shoe.webp" class="card-img-top" alt="shoe">
@@ -1322,21 +1379,7 @@
 
 
 
-
-
-
-
-    <script>
-
-
-
-
-    </script>
-
-
-
-
-
+    <script src="fstore.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
