Adds comment for category cards in the HTML file

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -27,6 +27,7 @@
         /* 19/06..submenu */
         /* 20/06..badges and pills */
         /* 21/06...promocard hover */
+        /* 23/06...category cards */
     </style>
 </head>
 
